--- a/001_lesson/index.html
+++ b/001_lesson/index.html
@@ -13,7 +13,7 @@
       }
     </style>
     <!-- External file with styles -->
-    <link rel="stylesheet" href="css/styles1.css" />
+    <link rel="stylesheet" href="styles1.css" />
   </head>
 
   <body>
