--- a/002_lesson/index.html
+++ b/002_lesson/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>CSS/CSS3 Basics</title>
-    <link rel="stylesheet" href="/home/vera/my folder/css/002_lesson/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
 
   <body>
