--- a/003_lesson/imdex.html
+++ b/003_lesson/imdex.html
@@ -14,7 +14,7 @@
     <hr />
     <!-- element element -->
     <div>
-      <p>Paragraph 1</p>
+      <p>Paragraph 1</p>1
     </div>
     <p>Paragraph 2</p>
     <hr />
