--- a/003_lesson/imdex.html
+++ b/003_lesson/imdex.html
@@ -57,7 +57,7 @@
     <a href="http://test3.org" target="_top">Test Link 1</a>
     <hr />
     <!-- element [attribute^='value'] | element [attribute$='value'] | element [attribute*='value'] -->
-    <a href="http://123.com">Test Link 1</a>
+    <a href="http://123.com">Test Ldink 1</a>
     <a href="http://4link56.com" target="_blank">Test Link 1</a>
     <a href="http://678.jpg" target="_top">Test Link 1</a>
   </body>
